src/objects/CanadianTax__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Country__c</fullName>
        <label>ISO Country Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Name__c</fullName>
        <label>Tax Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Percentage__c</fullName>
        <label>Tax Percentage</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <label>Countries Tax</label>
</CustomObject>